# kachaka_ros2

./: LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: navigation.md
docs/sim/: mapping_sim.md  navigation_sim.md
kachaka_description/: CMakeLists.txt  README.md  package.xml
kachaka_description/launch/: robot_description.launch.py  robot_display.launch.xml
kachaka_description/robot/: kachaka.urdf.xacro
kachaka_description/rviz/: display.rviz  kachaka.rviz
kachaka_description/urdf/: _kachaka.urdf.xacro
kachaka_gazebo/: CMakeLists.txt  README.md  package.xml
kachaka_gazebo/configs/: kachaka_bridge.yaml
kachaka_gazebo/launch/: simulation.launch.py  spawn_kachaka.launch.py
kachaka_gazebo/worlds/: depot.sdf  eht_store.sdf  sample_world.sdf
kachaka_mapping/: CMakeLists.txt  README.md  package.xml
kachaka_mapping/launch/: mapping_launch.py
kachaka_mapping/params/: mapper_params_online_sync.yaml
kachaka_mapping/rviz/: kachaka-mapping.rviz
kachaka_nav2_bringup/: CMakeLists.txt  README.md  package.xml
kachaka_nav2_bringup/launch/: kachaka_navigation.launch.py
kachaka_nav2_bringup/launch/utils/: bringup_launch.py  localization_launch.py  navigation_launch.py
kachaka_nav2_bringup/maps/: depot.pgm  depot.yaml  eht_store.pgm  eht_store.yaml  sample_world.pgm  sample_world.yaml  warehouse.pgm  warehouse.yaml
kachaka_nav2_bringup/params/: localization_param.yaml  nav2_params.yaml
utils/kachaka_teleop/: CMakeLists.txt  LICENSE  README.md  package.xml
utils/kachaka_teleop/config/: joy_controller_param.yaml  joy_linux_param.yaml
utils/kachaka_teleop/include/joy_controller/: joy_controller_component.hpp
utils/kachaka_teleop/launch/: joy_controller_launch.py
utils/kachaka_teleop/src/: joy_controller_component.cpp  joy_controller_node.cpp
