<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kachaka_gazebo</name>
  <version>0.0.0</version>
  <description>Kachaka Simulation</description>
  <maintainer email="dandelion1124@gmail.com">Yasuhiro Yoshimura</maintainer>
  <license>Apache 2.0</license>
  <author email="dandelion1124@gmail.com">Yasuhiro Yoshimura</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>image_transport_plugins</depend>
  <depend>kachaka_description</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>ros_gz_sim</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
